[gd_scene load_steps=19 format=3 uid="uid://gcgee3glc6vc"]

[ext_resource type="Script" path="res://Code/Player.gd" id="1_2bwdi"]
[ext_resource type="Script" path="res://Code/Components/Death.gd" id="2_d8x3c"]
[ext_resource type="Script" path="res://Code/Components/InterpolatingSynchronizer.gd" id="2_ndo20"]
[ext_resource type="Script" path="res://Code/Components/PlayerInput.gd" id="3_6juq4"]
[ext_resource type="PackedScene" uid="uid://tmunigaslihv" path="res://Scenes/Components/player_abilities.tscn" id="3_7qped"]
[ext_resource type="Script" path="res://Code/AbilityComponents/Core/AbilityRunner.gd" id="4_aqo0i"]
[ext_resource type="PackedScene" uid="uid://cniq41shbsxkv" path="res://Scenes/Inheritable/animatable_unit.tscn" id="4_qnr41"]
[ext_resource type="PackedScene" uid="uid://b8q3nchmonjde" path="res://Scenes/Components/player_health.tscn" id="6_cjdk0"]
[ext_resource type="Shader" path="res://Code/Rendering/visible_mask.gdshader" id="6_hos8x"]
[ext_resource type="Shader" path="res://Code/Rendering/outline.gdshader" id="7_hjc6o"]
[ext_resource type="Script" path="res://Code/Components/Telegraph.gd" id="9_36kk7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rf6ld"]
radius = 11.0

[sub_resource type="Gradient" id="Gradient_71tpn"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dkg4j"]
gradient = SubResource("Gradient_71tpn")
width = 30
height = 20
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cp2nl"]
shader = ExtResource("6_hos8x")

[sub_resource type="ViewportTexture" id="ViewportTexture_g0ajc"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eqrko"]
shader = ExtResource("7_hjc6o")
shader_parameter/outline_color = Color(0, 0.6035, 0.71, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_e08i6"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:controller")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("AbilityRunner:unit_local:_dict")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("AbilityRunner:unit_local:_is_special")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("PlayerHealth:current_health_diff")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("PlayerHealth:current_chip_diff")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:pathing")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("PlayerAbilities:cooldowns")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("PlayerAbilities:charge_cooldowns")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("PlayerAbilities:charges")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath(".:move_to_unit")
properties/10/spawn = true
properties/10/replication_mode = 1

[node name="Player" type="CharacterBody2D"]
collision_layer = 19
collision_mask = 69
motion_mode = 1
script = ExtResource("1_2bwdi")
movement_speed = 120.0

[node name="Death" type="Node" parent="." node_paths=PackedStringArray("animation", "runner", "to_disable", "to_hide", "to_hide_after_animation")]
script = ExtResource("2_d8x3c")
death_animation = 5
animation = NodePath("../SubViewport/Animation")
runner = NodePath("../AbilityRunner")
to_disable = [NodePath("..")]
to_hide = [NodePath("../PlayerHealth")]
to_hide_after_animation = [NodePath("../Visuals/Mask"), NodePath("../Visuals/Sprite")]

[node name="InterpolatingSynchronizer" type="Node" parent="."]
script = ExtResource("2_ndo20")
interpolation_speed = 10.0

[node name="Telegraph" type="Node2D" parent="."]
visible = false
z_index = -1
script = ExtResource("9_36kk7")
radius = 200.0
color = Color(0.088, 0.88, 0.8404, 1)

[node name="PlayerInput" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_6juq4")

[node name="PlayerAbilities" parent="." node_paths=PackedStringArray("runner") instance=ExtResource("3_7qped")]
unique_name_in_owner = true
runner = NodePath("../AbilityRunner")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rf6ld")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(32, 32)
render_target_update_mode = 4

[node name="Animation" parent="SubViewport" instance=ExtResource("4_qnr41")]
unique_name_in_owner = true
animation = &"die-se"

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 4)
texture = SubResource("GradientTexture2D_dkg4j")

[node name="Visuals" type="Node2D" parent="."]

[node name="Mask" type="Sprite2D" parent="Visuals"]
material = SubResource("ShaderMaterial_cp2nl")
position = Vector2(0, -8)
scale = Vector2(4, 4)
texture = SubResource("ViewportTexture_g0ajc")
centered = false
offset = Vector2(-16, -16)

[node name="Sprite" type="Sprite2D" parent="Visuals"]
z_index = 200
material = SubResource("ShaderMaterial_eqrko")
position = Vector2(0, -8)
scale = Vector2(4, 4)
texture = SubResource("ViewportTexture_g0ajc")
centered = false
offset = Vector2(-16, -16)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_e08i6")

[node name="AbilityRunner" type="MultiplayerSpawner" parent="." node_paths=PackedStringArray("character", "health", "nav_agent", "player_input", "shape_cast", "animator", "visual_offset", "telegraph")]
unique_name_in_owner = true
spawn_path = NodePath(".")
script = ExtResource("4_aqo0i")
character = NodePath("..")
health = NodePath("../PlayerHealth")
nav_agent = NodePath("../NavAgent")
player_input = NodePath("../PlayerInput")
shape_cast = NodePath("../ShapeCast2D")
animator = NodePath("../SubViewport/Animation")
visual_offset = NodePath("../Visuals")
telegraph = NodePath("../Telegraph")

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
visible = false
enabled = false
shape = SubResource("CircleShape2D_rf6ld")
target_position = Vector2(0, 0)

[node name="PlayerHealth" parent="." instance=ExtResource("6_cjdk0")]
z_index = 300
position = Vector2(0, -28)

[node name="CameraTarget" type="RemoteTransform2D" parent="."]
unique_name_in_owner = true
update_rotation = false
update_scale = false

[connection signal="action_pressed" from="PlayerInput" to="PlayerAbilities" method="try_run_ability"]
[connection signal="move_command" from="PlayerInput" to="." method="_move_command_given"]
[connection signal="move_command" from="PlayerInput" to="PlayerAbilities" method="_on_move_command"]
[connection signal="move_cancelled" from="PlayerAbilities" to="." method="cancel_move"]
[connection signal="move_issued" from="PlayerAbilities" to="." method="_move_command_given"]
[connection signal="move_to_unit_issued" from="PlayerAbilities" to="." method="_move_to_unit"]
[connection signal="synchronized" from="MultiplayerSynchronizer" to="AbilityRunner" method="resync_blackboards"]
[connection signal="health_depleted" from="PlayerHealth" to="Death" method="_on_death"]
